--- a/graduation-project/src/main/resources/application.yml
+++ b/graduation-project/src/main/resources/application.yml
@@ -10,4 +10,11 @@ spring:
 lin-chen:
   token-verify:
     verifyURL:
+      - GET /admin/**
+      - PUT /admin/**
+      - DELETE /admin/**
+
+
       - PUT /api/user/**
+
+
